fixed side-panel scroll overflow issue

--- a/django_app/frontend/src/redbox_design_system/rbds/layouts/side-panel.scss
+++ b/django_app/frontend/src/redbox_design_system/rbds/layouts/side-panel.scss
@@ -7,6 +7,7 @@
   top: 0;
   align-self: flex-start;
   height: 100vh;
+  overflow: hidden;
 
   &--collapsed {
     width: var(--side-panel-collapsed-width);
